find_package(Qt6 6.5 REQUIRED COMPONENTS Core)
find_package(ZLIB REQUIRED)

add_library(skygate-ephemeris STATIC
    include/skygate/ephemeris/CatalogLoadResult.hpp
    include/skygate/ephemeris/BodyTrailCalculator.hpp
    include/skygate/ephemeris/CatalogComposer.hpp
    include/skygate/ephemeris/CatalogFactory.hpp
    include/skygate/ephemeris/CatalogLoader.hpp
    include/skygate/ephemeris/CatalogPayloadParser.hpp
    include/skygate/ephemeris/CelestialReferenceCalculator.hpp
    include/skygate/ephemeris/ConstellationData.hpp
    include/skygate/ephemeris/ConstellationDataCodec.hpp
    include/skygate/ephemeris/ConstellationReferenceCalculator.hpp
    include/skygate/ephemeris/EphemerisEngineFactory.hpp
    include/skygate/ephemeris/IEphemerisEngine.hpp
    include/skygate/ephemeris/IStarCatalog.hpp
    include/skygate/ephemeris/StellariumConstellationParser.hpp
    include/skygate/ephemeris/Types.hpp
    src/common/StringUtilities.hpp
    src/catalog/CatalogBodyNormalization.hpp
    src/catalog/CatalogBodyParseResult.hpp
    src/catalog/BundledCatalogParser.hpp
    src/catalog/CatalogIdentity.hpp
    src/catalog/CatalogParsingUtilities.hpp
    src/catalog/CatalogPayloadFormatDetector.hpp
    src/catalog/CatalogZipEntrySelector.hpp
    src/catalog/CompressedDataInflater.hpp
    src/catalog/CoreBodyCatalogAugmenter.hpp
    src/catalog/DeepSkyCatalogMerger.hpp
    src/catalog/DelimitedCatalogReader.hpp
    src/catalog/OpenNgcObjectMapper.hpp
    src/catalog/StellariumHipParser.hpp
    src/catalog/StellariumLabelRefExtractor.hpp
    src/catalog/StellariumLineRefExtractor.hpp
    src/catalog/ZipBinaryUtilities.hpp
    src/common/StringUtilities.cpp
    src/catalog/CatalogBodyNormalization.cpp
    src/catalog/CatalogIdentity.cpp
    src/catalog/CatalogComposer.cpp
    src/catalog/CatalogParsingUtilities.cpp
    src/catalog/CatalogFactory.cpp
    src/catalog/CatalogLoader.cpp
    src/catalog/CatalogPayloadFormatDetector.cpp
    src/catalog/CatalogPayloadParser.cpp
    src/catalog/CatalogZipEntrySelector.cpp
    src/catalog/CompressedDataInflater.cpp
    src/catalog/ConstellationDataCodec.cpp
    src/catalog/CoreBodyCatalogAugmenter.cpp
    src/catalog/DeepSkyCatalogMerger.cpp
    src/catalog/DelimitedCatalogReader.cpp
    src/catalog/BundledConstellationData.cpp
    src/catalog/CsvRowTokenizer.hpp
    src/catalog/GzipCodec.hpp
    src/catalog/HygCatalogParser.hpp
    src/catalog/HygGzipCatalogParser.hpp
    src/catalog/InMemoryStarCatalog.hpp
    src/catalog/OpenNgcObjectMapper.cpp
    src/catalog/OpenNgcCatalogParser.hpp
    src/catalog/ZipCodec.hpp
    src/catalog/ZipDirectoryReader.cpp
    src/catalog/ZipDirectoryReader.hpp
    src/catalog/ZipEntryExtractor.cpp
    src/catalog/ZipEntryExtractor.hpp
    src/catalog/StellariumConstellationParser.cpp
    src/catalog/StellariumHipParser.cpp
    src/catalog/StellariumLabelRefExtractor.cpp
    src/catalog/StellariumLineRefExtractor.cpp
    src/engine/CoordinateTransform.hpp
    src/engine/FixedEquatorialLookup.hpp
    src/engine/JulianDateTime.hpp
    src/engine/KnownConstellationLookup.hpp
    src/engine/MoonEquatorialCalculator.hpp
    src/engine/PlanetEquatorialCalculator.hpp
    src/engine/StarEquatorialCalculator.hpp
    src/engine/SunEquatorialCalculator.hpp
    src/CelestialReferenceCalculator.cpp
    src/ConstellationReferenceCalculator.cpp
    src/IEphemerisEngine.cpp
    src/SimpleEphemerisEngine.cpp
    src/catalog/BundledCatalogParser.cpp
    src/catalog/CsvRowTokenizer.cpp
    src/catalog/GzipCodec.cpp
    src/catalog/HygCatalogParser.cpp
    src/catalog/HygGzipCatalogParser.cpp
    src/catalog/InMemoryStarCatalog.cpp
    src/catalog/OpenNgcCatalogParser.cpp
    src/catalog/ZipCodec.cpp
    src/engine/CoordinateTransform.cpp
    src/engine/FixedEquatorialLookup.cpp
    src/engine/JulianDateTime.cpp
    src/engine/KnownConstellationLookup.cpp
    src/engine/MoonEquatorialCalculator.cpp
    src/engine/PlanetEquatorialCalculator.cpp
    src/engine/StarEquatorialCalculator.cpp
    src/engine/SunEquatorialCalculator.cpp
    src/BodyTrailCalculator.cpp
)

target_include_directories(skygate-ephemeris
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

target_link_libraries(skygate-ephemeris
    PUBLIC
        skygate::core
    PRIVATE
        Qt6::Core
        ZLIB::ZLIB
)

target_compile_features(skygate-ephemeris PUBLIC cxx_std_20)

add_library(skygate::ephemeris ALIAS skygate-ephemeris)
